# physics-app-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  main.py  models.py  rag.py  routers.py  schemas.py
data/: mechanics.txt
scripts/: index_documents.py  test_rag.py
